--- a/packages/AutoComplete/package.json
+++ b/packages/AutoComplete/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/yourvic-autocomplete",
-  "version": "1.1.3",
+  "version": "1.1.3-next.19",
   "description": "An autocomplete component.",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,8 +10,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-global": "1.1.3",
-    "lodash.debounce": "^4.0.8",
-    "@dpc-sdp/ripple-icon": "^1.8.0"
+    "@dpc-sdp/ripple-icon": "^1.8.0",
+    "@dpc-sdp/yourvic-global": "1.1.3-next.19",
+    "lodash.debounce": "^4.0.8"
   }
 }
