--- a/packages/DataBlock/package.json
+++ b/packages/DataBlock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/yourvic-data-block",
-  "version": "1.1.3",
+  "version": "1.1.3-next.19",
   "description": "A data block component",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/yourvic-global": "1.1.3",
-    "@dpc-sdp/ripple-icon": "^1.8.0"
+    "@dpc-sdp/ripple-icon": "^1.8.0",
+    "@dpc-sdp/yourvic-global": "1.1.3-next.19"
   }
 }
