--- a/packages/TreeMap/package.json
+++ b/packages/TreeMap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/yourvic-treemap",
-  "version": "1.1.3",
+  "version": "1.1.3-next.19",
   "description": "A tree map chart component.",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@dpc-sdp/ripple-global": "^1.8.0",
+    "@dpc-sdp/yourvic-global": "1.1.3-next.19",
     "chart.js": "^2.9.3",
     "chartjs-chart-treemap": "^0.2.3",
-    "lodash.merge": "^4.6.2",
-    "@dpc-sdp/yourvic-global": "1.1.3"
+    "lodash.merge": "^4.6.2"
   }
 }
