--- a/examples/vue-example-app/package.json
+++ b/examples/vue-example-app/package.json
@@ -20,7 +20,14 @@
     "@dpc-sdp/ripple-site-header": "1.8.0",
     "@dpc-sdp/ripple-card": "1.8.0",
     "@dpc-sdp/ripple-grants": "1.8.0",
-    "@dpc-sdp/yourvic-example-site": "dev",
+    "@dpc-sdp/yourvic-bar-chart": "dev",
+    "@dpc-sdp/yourvic-line-chart": "dev",
+    "@dpc-sdp/yourvic-pie-chart": "dev",
+    "@dpc-sdp/yourvic-treemap": "dev",
+    "@dpc-sdp/yourvic-data-block": "dev",
+    "@dpc-sdp/yourvic-map-core": "dev",
+    "@dpc-sdp/yourvic-global": "dev",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.10"
   },
