--- a/packages/Bundle/package.json
+++ b/packages/Bundle/package.json
@@ -26,12 +26,17 @@
     "@dpc-sdp/yourvic-map-core": "1.1.3",
     "@dpc-sdp/yourvic-toggle-list": "1.1.3",
     "@dpc-sdp/yourvic-treemap": "1.1.3",
-    "@dpc-sdp/yourvic-examples": "1.1.3"
+    "@dpc-sdp/yourvic-examples": "1.1.3",
+    "whatwg-fetch": "3.2.0"
   },
   "devDependencies": {
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
