--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dpc-sdp/myvic-global",
   "version": "1.1.3",
-  "description": "Core package for Your Victoria",
+  "description": "Core package for My Victoria components",
   "main": "index.js",
   "license": "Apache-2.0",
   "homepage": "https://ripple.sdp.vic.gov.au",
