--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,3 +35,19 @@ services:
       - AMAZEEIO_HTTP_PORT=3000
     ports:
       - "3000:3000"
+
+  # Example site
+  proxy:
+    build:
+      context: .
+      dockerfile: Dockerfile.proxy
+    networks:
+      - default
+    labels:
+      lagoon.type: node
+    environment:
+      - AMAZEEIO_URL=proxy.docker.amazee.io
+      - AMAZEEIO=AMAZEEIO
+      - AMAZEEIO_HTTP_PORT=3000
+    ports:
+      - "3000:3000"
