--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,19 +18,35 @@ services:
     ports:
       - "9001:3000"
 
+  # # Example site
+  # example:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.example
+  #     args:
+  #       - LAGOON_GIT_BRANCH=
+  #   networks:
+  #     - default
+  #   labels:
+  #     lagoon.type: node
+  #   environment:
+  #     - AMAZEEIO_URL=example.docker.amazee.io
+  #     - AMAZEEIO=AMAZEEIO
+  #     - AMAZEEIO_HTTP_PORT=3000
+  #   ports:
+  #     - "3000:3000"
+
   # Example site
-  example:
+  proxy:
     build:
       context: .
-      dockerfile: Dockerfile.example
-      args:
-        - LAGOON_GIT_BRANCH=
+      dockerfile: Dockerfile.proxy
     networks:
       - default
     labels:
       lagoon.type: node
     environment:
-      - AMAZEEIO_URL=example.docker.amazee.io
+      - AMAZEEIO_URL=proxy.docker.amazee.io
       - AMAZEEIO=AMAZEEIO
       - AMAZEEIO_HTTP_PORT=3000
     ports:
