--- a/packages/BarChart/package.json
+++ b/packages/BarChart/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-bar-chart",
-  "version": "1.1.3",
+  "version": "1.2.0-alpha.0",
   "description": "A bar chart component.",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/myvic-global": "1.1.3",
+    "@dpc-sdp/myvic-global": "1.2.0-alpha.0",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "lodash.merge": "^4.6.2",
