--- a/packages/ToggleList/package.json
+++ b/packages/ToggleList/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-toggle-list",
-  "version": "1.1.3",
+  "version": "1.2.0-alpha.0",
   "description": "A toggle list component.",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,6 +10,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@dpc-sdp/myvic-global": "1.1.3"
+    "@dpc-sdp/myvic-global": "1.2.0-alpha.0"
   }
 }
