--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-global",
-  "version": "1.1.3",
+  "version": "1.2.0-alpha.0",
   "description": "Core package for My Victoria components",
   "main": "index.js",
   "license": "Apache-2.0",
