--- a/packages/map-core/package.json
+++ b/packages/map-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-map-core",
-  "version": "1.1.3",
+  "version": "1.2.0-alpha.0",
   "description": "Core functions of map for myvictoria.vic.gov.au",
   "main": "index.js",
   "repository": "https://github.com/dpc-sdp/myvictoria-vic-gov-au/tree/master/packages/map-core",
@@ -9,8 +9,8 @@
     "access": "public"
   },
   "dependencies": {
+    "@dpc-sdp/myvic-global": "1.2.0-alpha.0",
     "@dpc-sdp/ripple-global": "^1.8.0",
-    "@dpc-sdp/myvic-global": "1.1.3",
     "ol": "^6.3.1",
     "ol-ext": "^3.1.12",
     "ol-mapbox-style": "^6.1.2",
