--- a/src/package.json
+++ b/src/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@dpc-sdp/myvic-storybook",
   "description": "Storybook instance for myvictoria component testing",
-  "version": "1.1.3",
+  "version": "1.2.0-alpha.0",
   "private": true,
   "scripts": {
     "start": "start-storybook -p 6006 -s ./static",
     "build-storybook": "NODE_ENV=production build-storybook -c .storybook -s ./static -o ./public"
   },
   "dependencies": {
+    "@dpc-sdp/myvic-map-core": "1.2.0-alpha.0",
     "@dpc-sdp/ripple-global": "^1.8.0",
-    "@dpc-sdp/ripple-markup": "^1.8.0",
     "@dpc-sdp/ripple-grid": "^1.8.0",
-    "@dpc-sdp/myvic-map-core": "1.1.3",
+    "@dpc-sdp/ripple-markup": "^1.8.0",
     "@storybook/vue": "^5.3.18",
     "style-loader": "^1.2.1",
     "vue": "^2.6.11"
@@ -24,6 +24,7 @@
     "@storybook/addon-storyshots": "^5.3.18",
     "@storybook/addon-viewport": "^5.3.18",
     "@storybook/vue": "^5.3.18",
+    "@vue/babel-preset-jsx": "^1.1.2",
     "axe-core": "^3.2.2",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
@@ -42,8 +43,7 @@
     "url-loader": "^2.0.1",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "@vue/babel-preset-jsx": "^1.1.2"
+    "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
     "> 1%",
