--- a/packages/Bundle/package.json
+++ b/packages/Bundle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-bundle",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "Bundle (UMD) of MyVictoria components",
   "license": "Apache-2.0",
   "main": "dist/myvic-bundle.js",
@@ -14,27 +14,27 @@
     "build-analyze": "cross-env BUNDLE_ANALYZE=1 webpack"
   },
   "dependencies": {
-    "@dpc-sdp/myvic-global": "1.1.3",
+    "@dpc-sdp/myvic-addresssearch": "1.2.0",
+    "@dpc-sdp/myvic-areasearch": "1.2.0",
+    "@dpc-sdp/myvic-autocomplete": "1.2.0",
+    "@dpc-sdp/myvic-bar-chart": "1.2.0",
+    "@dpc-sdp/myvic-data-block": "1.2.0",
+    "@dpc-sdp/myvic-examples": "1.2.0",
+    "@dpc-sdp/myvic-global": "1.2.0",
+    "@dpc-sdp/myvic-line-chart": "1.2.0",
+    "@dpc-sdp/myvic-map-core": "1.2.0",
+    "@dpc-sdp/myvic-pie-chart": "1.2.0",
+    "@dpc-sdp/myvic-toggle-list": "1.2.0",
+    "@dpc-sdp/myvic-treemap": "1.2.0",
     "@dpc-sdp/ripple-global": "^1.8.0",
-    "@dpc-sdp/myvic-addresssearch": "1.1.3",
-    "@dpc-sdp/myvic-areasearch": "1.1.3",
-    "@dpc-sdp/myvic-autocomplete": "1.1.3",
-    "@dpc-sdp/myvic-bar-chart": "1.1.3",
-    "@dpc-sdp/myvic-data-block": "1.1.3",
-    "@dpc-sdp/myvic-line-chart": "1.1.3",
-    "@dpc-sdp/myvic-pie-chart": "1.1.3",
-    "@dpc-sdp/myvic-map-core": "1.1.3",
-    "@dpc-sdp/myvic-toggle-list": "1.1.3",
-    "@dpc-sdp/myvic-treemap": "1.1.3",
-    "@dpc-sdp/myvic-examples": "1.1.3",
-    "whatwg-fetch": "3.2.0",
-    "babel-polyfill": "6.26.0"
+    "babel-polyfill": "6.26.0",
+    "whatwg-fetch": "3.2.0"
   },
   "devDependencies": {
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
     "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "browserslist": [
     "> 1%",
