--- a/packages/TreeMap/package.json
+++ b/packages/TreeMap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpc-sdp/myvic-treemap",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "A tree map chart component.",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,10 +10,10 @@
     "access": "public"
   },
   "dependencies": {
+    "@dpc-sdp/myvic-global": "1.2.0",
     "@dpc-sdp/ripple-global": "^1.8.0",
     "chart.js": "^2.9.3",
     "chartjs-chart-treemap": "^0.2.3",
-    "lodash.merge": "^4.6.2",
-    "@dpc-sdp/myvic-global": "1.1.3"
+    "lodash.merge": "^4.6.2"
   }
 }
