--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "lint": "sass-lint && yarn lint:es",
     "lint:es": "eslint --ext .js,.vue . --max-warnings 0",
     "lint:fix": "eslint --ext .js,.vue . --fix",
-    "test:unit": "jest --colors --detectOpenHandles",
+    "test:unit": "jest --colors",
     "test:nuxt": "start-server-and-test nuxt:dev http://localhost:3000 cy:run",
     "nuxt:dev": "nuxt test/nuxt/fixture",
     "cy:run": "cypress run",
