--- a/examples/vue-example-app/package.json
+++ b/examples/vue-example-app/package.json
@@ -20,6 +20,7 @@
     "@dpc-sdp/ripple-site-header": "1.8.0",
     "@dpc-sdp/ripple-card": "1.8.0",
     "@dpc-sdp/ripple-grants": "1.8.0",
+    "@dpc-sdp/myvic-address-search-map": "latest",
     "@dpc-sdp/myvic-bar-chart": "latest",
     "@dpc-sdp/myvic-line-chart": "latest",
     "@dpc-sdp/myvic-pie-chart": "latest",
