--- a/examples/vue-example-app/package.json
+++ b/examples/vue-example-app/package.json
@@ -18,14 +18,14 @@
     "@dpc-sdp/ripple-grid": "^1.8.0",
     "@dpc-sdp/ripple-layout": "^1.8.0",
     "@dpc-sdp/ripple-site-header": "^1.8.0",
-    "@dpc-sdp/myvic-address-search-map": "latest",
-    "@dpc-sdp/myvic-bar-chart": "latest",
-    "@dpc-sdp/myvic-line-chart": "latest",
-    "@dpc-sdp/myvic-pie-chart": "latest",
-    "@dpc-sdp/myvic-treemap": "latest",
-    "@dpc-sdp/myvic-data-block": "latest",
-    "@dpc-sdp/myvic-map-core": "latest",
-    "@dpc-sdp/myvic-global": "latest",
+    "@dpc-sdp/myvic-address-search-map": "1.3.1",
+    "@dpc-sdp/myvic-bar-chart": "1.3.1",
+    "@dpc-sdp/myvic-line-chart": "1.3.1",
+    "@dpc-sdp/myvic-pie-chart": "1.3.1",
+    "@dpc-sdp/myvic-treemap": "1.3.1",
+    "@dpc-sdp/myvic-data-block": "1.3.1",
+    "@dpc-sdp/myvic-map-core": "1.3.1",
+    "@dpc-sdp/myvic-global": "1.3.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.10"
