--- a/examples/vue-example-app/package.json
+++ b/examples/vue-example-app/package.json
@@ -14,7 +14,9 @@
     "test:smoke": "cross-env TEST=1 start-server-and-test serve http://localhost:3000 cy:run-smoke"
   },
   "dependencies": {
+    "@dpc-sdp/ripple-card": "^1.8.0",
     "@dpc-sdp/ripple-global": "^1.8.0",
+    "@dpc-sdp/ripple-grants": "^1.8.0",
     "@dpc-sdp/ripple-grid": "^1.8.0",
     "@dpc-sdp/ripple-layout": "^1.8.0",
     "@dpc-sdp/ripple-site-header": "^1.8.0",
@@ -28,15 +30,17 @@
     "@dpc-sdp/myvic-global": "1.3.3",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
-    "cypress": "^4.9.0",
     "@vue/cli-plugin-babel": "~4.4.6",
     "@vue/cli-plugin-eslint": "~4.4.6",
+    "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-service": "~4.4.6",
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
+    "cypress": "^4.9.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
