--- a/examples/vue-example-app/package.json
+++ b/examples/vue-example-app/package.json
@@ -19,6 +19,7 @@
     "@dpc-sdp/ripple-layout": "^1.8.0",
     "@dpc-sdp/ripple-site-header": "^1.8.0",
     "@dpc-sdp/myvic-address-search-map": "1.3.2",
+    "@dpc-sdp/myvic-address-search-map": "dev",
     "@dpc-sdp/myvic-bar-chart": "1.3.2",
     "@dpc-sdp/myvic-line-chart": "1.3.2",
     "@dpc-sdp/myvic-pie-chart": "1.3.2",
