--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -16,6 +16,9 @@ RUN yarn install
 # copy project files and folders to the current working directory (i.e. 'app' folder)
 COPY examples/vue-example-app/ .
 
+ARG VUE_APP_COVID_MAP_RADIUS
+ENV VUE_APP_COVID_MAP_RADIUS ${VUE_APP_COVID_MAP_RADIUS}
+
 # build app for production with minification
 RUN yarn build
 
