--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -16,6 +16,8 @@ RUN yarn install
 # copy project files and folders to the current working directory (i.e. 'app' folder)
 COPY examples/vue-example-app/ .
 
+ARG VUE_APP_COVID_MAP_BASEMAP_PROVIDER
+ENV VUE_APP_COVID_MAP_BASEMAP_PROVIDER ${VUE_APP_COVID_MAP_BASEMAP_PROVIDER}
 ARG VUE_APP_COVID_MAP_RADIUS
 ENV VUE_APP_COVID_MAP_RADIUS ${VUE_APP_COVID_MAP_RADIUS}
 ARG VUE_APP_COVID_MAP_GEOCODE_PROVIDER
