--- a/packages/TreeMap/package.json
+++ b/packages/TreeMap/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@dpc-sdp/myvic-global": "1.8.2",
     "@dpc-sdp/ripple-global": "^1.8.0",
-    "chart.js": "^2.9.3",
+    "chart.js": "2.9.3",
     "chartjs-chart-treemap": "^0.2.3",
     "lodash.merge": "^4.6.2"
   }
