--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "vuex-mock-store": "^0.0.7"
   },
   "scripts": {
-    "lerna:publish": "lerna publish --conventional-commits",
+    "lerna:publish": "lerna publish --conventional-commits --force-publish",
     "start:storybook": "cd src && yarn start",
     "build:storybook": "cd src && yarn build-storybook",
     "lint": "sass-lint && yarn lint:es",
