--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-jest": "^24.9.0",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-require-context-hook": "^1.0.0",
+    "babel-plugin-transform-vue-jsx": "^4.0.0",
     "babel-preset-vue": "^2.0.2",
     "core-js": "^2.6.5",
     "cross-env": "^7.0.2",
