--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-vue": "^2.0.2",
     "core-js": "^2.6.5",
     "cross-env": "^7.0.2",
+    "css-loader": "4.3.0",
     "cypress": "^4.7.0",
     "eslint": "^5.11.1",
     "eslint-config-standard": "^12.0.0",
