--- a/examples/vue-example-app/.env
+++ b/examples/vue-example-app/.env
@@ -3,3 +3,4 @@ VUE_APP_COVID_MAP_GEOCODE_PROVIDER=Mapbox
 VUE_APP_COVID_MAP_VICMAP_API_KEY=0e8bf7b3-b681-4d0b-9bcd-b8ef6a071296
 VUE_APP_COVID_MAP_BASEMAP_PROVIDER=Vicmap
 VUE_APP_COVID_MAP_LABEL=Restriction zone
+VUE_APP_COVID_MAP_FEATURE_URL=myvic:covid_metro_area_4326
