--- a/packages/map-core/package.json
+++ b/packages/map-core/package.json
@@ -12,9 +12,9 @@
     "@dpc-sdp/myvic-global": "2.2.7",
     "@dpc-sdp/ripple-alert": "^1.8.0",
     "@dpc-sdp/ripple-global": "^1.8.0",
-    "ol": "^6.4.3",
-    "ol-ext": "^3.1.16",
-    "ol-mapbox-style": "^6.1.4",
+    "ol": "6.15.1",
+    "ol-ext": "3.2.29",
+    "ol-mapbox-style": "9.1.0",
     "proj4": "^2.6.2"
   },
   "gitHead": "c87172a1c27cd4abc90fd5d3362ac0f96edee108"
