--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "vuex-mock-store": "^0.0.7"
   },
   "scripts": {
+    "bump-version": "lerna version --no-git-tag-version --no-push",
     "lerna:publish": "lerna publish --conventional-commits --force-publish",
     "start:storybook": "cd src && yarn start",
     "build:storybook": "cd src && yarn build-storybook",
